# sst-rs

./: .gitignore  Cargo.toml  credentials.txt  design.txt
sql/: tables.sql
src/: db.rs  lib.rs  main.rs  model.rs  parser.rs  subcommands.rs
src/plaid/: auth.rs  entities.rs  requests.rs
