[package]
name = "sst"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.9", features = [ "local-offset", "parsing", "serde" ] }
sqlite = "0.26.0"
getopts = "0.2"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
